# gcp-oidc

./: Dockerfile  README.md  main.py  pyproject.toml
examples/: receive.py  request.py
src/services/: __init__.py
src/services/service_a/: __init__.py  main.py  settings.py
src/services/service_b/: __init__.py  main.py  settings.py
src/shared/: __init__.py  app.py
tf/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tf  variables.tf
