[tool.poetry]
name = "gcp-oidc"
version = "0.1.0"
description = "FastAPI application for working with Google Cloud OIDC."
authors = ["Nickolas Kraus"]

[tool.poetry.dependencies]
python = ">=3.14,<4.0"
fastapi = {extras = ["standard"], version = "*"}
uvicorn = {extras = ["standard"], version = "*"}

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
