[tool.poetry]
name = "gcp-oidc"
version = "0.1.0"
description = "FastAPI application for working with Google Cloud OIDC."
authors = ["Nickolas Kraus"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = {extras = ["standard"], version = "*"}
uvicorn = {extras = ["standard"], version = "*"}
google-auth = "^2.43.0"
google-cloud-logging = "^3.11.2"
httpx = "^0.28.1"
pyjwt = "^2.10.1"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
